workshops/OpenShift Pipelines/gogs/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-gogs
  namespace: gogs-app
spec:
  selector:
    matchLabels:
      app: app-gogs
  replicas: 1
  template:
    metadata:
      labels:
        app: app-gogs
    spec:
      containers:
        - name: app-gogs
          image: docker.io/gogs/gogs
          ports:
            - containerPort: 3000
      volumeMounts:
        - mountPath: "/data"            
          name: pvc-data
        - mountPath: "/backup"
          name: pvc-backup
        - mountPath: "/app/gogs"
          name: pvc-appgogs
      volumes:
      - name: pvc-data
        persistentVolumeClaim:
          claimName: pvc-data
      - name: pvc-backup
        persistentVolumeClaim:
          claimName: pvc-backup
      - name: pvc-appgogs
        persistentVolumeClaim:
          claimName: pvc-appgogs
