workshops/OpenShift Pipelines/gogs/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app-gogs
  namespace: gogs
spec:
  ports:
  - port: 3000
    targetPort: 3000
    protocol: TCP
  selector:
    app: app-gogs
